@@ -179,14 +179,18 @@ static void start_ptrace(pid_t pid)
     }
 }
 
-static void end_ptrace(pid_t pid)
+static void end_ptrace(pid_t pid, int flags)
 {
     long ret;
 
-    ret = ptrace(PTRACE_DETACH, pid, 0, 0);
-    if (ret == -1) {
-	perror("Failed to detach");
-	exit(1);
+    if (flags & FLAG_KILL_PROCESS) {
+	ret = ptrace(PTRACE_KILL, pid, 0, 0);
+	if (ret == -1)
+	    perror("Failed to kill process.");
+    } else {
+	ret = ptrace(PTRACE_DETACH, pid, 0, 0);
+	if (ret == -1)
+	    perror("Failed to detach");
     }
 }
 
@@ -228,7 +232,7 @@ void get_process(pid_t pid, int flags, struct list *process_image, long *bin_off
     restore_page(pid, (void*)scribble_zone, pagebackup);
     restore_registers(pid, &r);
 out_ptrace:
-    end_ptrace(pid);
+    end_ptrace(pid, flags);
     
     if (!success)
 	abort();
